[package]
name = "axum-raw-websocket"
version = "0.8.0"
edition = "2024"
license = "MIT"
authors = ["protom <office@protom.eu>"]
description = "Handles WebSocket upgrades with raw socket access, based on Axum's WebSocket upgrade mechanism for Tungstenite."
keywords = ["axum", "websocket"]

[dependencies]
tokio = "1"
axum = { version = "0.8", features = ["ws", "tokio"] }
hyper = "1.7"
hyper-util = { version = "0.1", features = ["tokio"] }
sha1 = "0.10"
base64 = "0.22"

[features]
http2 = ["axum/http2"]
